图片和表单一起提交测试

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,6 +8,11 @@
 <p>Get your greeting <a href="/greeting">here</a></p>
 <form action="/upload" method="POST" enctype="multipart/form-data">
     文件：<input type="file" name="test"/>
+    <br> <br>
+   用户名： <input type="text" name="userName">
+    <br> <br>
+   密码： <input type="text" name="userpass">
+    <br> <br>
     <input type="submit" />
 </form>
 <a href="/download">下载test</a>
