图片和表单一起提交测试

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -26,6 +26,8 @@
 <form method="POST" enctype="multipart/form-data" action="/batchupload">
     <p>文件1：<input type="file" name="file" /></p>
     <p>文件2：<input type="file" name="file" /></p>
+    <p>文件3：<input type="file" name="file" /></p>
+    <p>item: <input type="text" name="options" value="A,right;B,right;"> </p>
     <p><input type="submit" value="上传" /></p>
 </form>
 </body>
